add default-env in python api v1 (#369)